--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="gui"/>
+                <img class="card-img-top" src="images/gui.png" alt="gui"/>
                 <div class="card-body">
                     <h5 class="card-title">GUI - MVC & Templating <small class="text-muted">tue. oct. 6</small></h5>
                     <p class="card-text">Des jolies pages web</p>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-secondary">Cours</a>
-                    <a href="" class="btn btn-secondary">TP</a>
+                    <a href="cours/05-gui/05-gui.html" class="btn btn-primary">Cours</a>
+                    <a href="cours/05-gui/05-tp-gui.html" class="btn btn-primary">TP</a>
                 </div>
             </div>
 
