--- a/index.html
+++ b/index.html
@@ -128,21 +128,37 @@
                 </div>
             </div>
 
-
             <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="high-availability"/>
+                <img class="card-img-top" src="images/asynchronism.png" alt="asynchronism"/>
                 <div class="card-body">
-                    <h5 class="card-title">Asynchronisme & Patterns de haute disponibilité <small class="text-muted">tue. nov. 03</small></h5>
-                    <p class="card-text">Le service toujours présent</p>
+                    <h5 class="card-title">Asynchronisme <small class="text-muted">tue. nov. 03</small></h5>
+                    <p class="card-text">En quête de performance</p>
+                    <p class="card-text"><small class="text-muted">Last updated fri. oct. 30</small></p>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-secondary">Cours</a>
-                    <a href="" class="btn btn-secondary">TP</a>
+                    <a href="cours/08-asynchronism/08-asynchronism.html" class="btn btn-primary">Cours</a>
                 </div>
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="asynchronism"/>
+                <img class="card-img-top" src="images/high_availability.png" alt="high-availability"/>
+                <div class="card-body">
+                    <h5 class="card-title">Patterns de haute disponibilité <small class="text-muted">tue. nov. 03</small></h5>
+                    <p class="card-text">Le service toujours présent</p>
+                    <p class="card-text"><small class="text-muted">Last updated fri. oct. 30</small></p>
+                </div>
+                <div class="card-footer">
+                    <a href="cours/08-high-availability/08-high-availability.html" class="btn btn-primary">Cours</a>
+                    <a href="cours/08-high-availability/08-tp-high-availability.html" class="btn btn-primary">TP</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="card-deck top-10">
+
+            <div class="card">
+                <img class="card-img-top" src="images/placeholder.png" alt="cloud-patterns"/>
                 <div class="card-body">
                     <h5 class="card-title">Patterns de type cloud <small class="text-muted">tue. nov. 10</small></h5>
                     <p class="card-text">Le code dans les nuages</p>
@@ -153,13 +169,58 @@
                 </div>
             </div>
 
+            <div class="card">
+                <img class="card-img-top" src="images/placeholder.png" alt="messaging"/>
+                <div class="card-body">
+                    <h5 class="card-title">Messaging <small class="text-muted">tue. nov. 17</small></h5>
+                    <p class="card-text">Envoi de messages par un lapin blanc</p>
+                </div>
+                <div class="card-footer">
+                    <a href="" class="btn btn-secondary">Cours</a>
+                    <a href="" class="btn btn-secondary">TP</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="images/placeholder.png" alt="practice"/>
+                <div class="card-body">
+                    <h5 class="card-title">Practice again <small class="text-muted">tue. nov. 24</small></h5>
+                    <p class="card-text">On continue notre jeu</p>
+                </div>
+                <div class="card-footer">
+                    <a href="" class="btn btn-secondary">TP</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="card-deck top-10">
+
+            <div class="card">
+                <img class="card-img-top" src="images/placeholder.png" alt="cloud-patterns"/>
+                <div class="card-body">
+                    <h5 class="card-title">Dernière séance <small class="text-muted">tue. dec. 1</small></h5>
+                    <p class="card-text"></p>
+                </div>
+                <div class="card-footer">
+                    <a href="" class="btn btn-secondary">Cours</a>
+                    <a href="" class="btn btn-secondary">TP</a>
+                </div>
+            </div>
+
+            <div class="card invisible">
+            </div>
+
+            <div class="card invisible">
+            </div>
+
         </div>
 
     </div>
 
     <div id="footer">
         <div id="footer-text">
-            Last updated fri. oct. 9
+            Last updated fri. oct. 30
         </div>
     </div>
 
