--- a/index.html
+++ b/index.html
@@ -158,14 +158,25 @@
         <div class="card-deck top-10">
 
             <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="cloud-patterns"/>
+                <img class="card-img-top" src="images/cloud.png" alt="cloud-patterns"/>
                 <div class="card-body">
                     <h5 class="card-title">Patterns de type cloud <small class="text-muted">tue. nov. 10</small></h5>
                     <p class="card-text">Le code dans les nuages</p>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-secondary">Cours</a>
-                    <a href="" class="btn btn-secondary">TP</a>
+                    <a href="cours/09-cloud/09-cloud.html" class="btn btn-primary">Cours</a>
+                    <a href="cours/09-cloud/09-tp-cloud.html" class="btn btn-primary">TP</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="images/practice.png" alt="practice"/>
+                <div class="card-body">
+                    <h5 class="card-title">Practice again <small class="text-muted">tue. nov. 10</small></h5>
+                    <p class="card-text">On continue notre jeu</p>
+                </div>
+                <div class="card-footer">
+                    <a href="cours/10-practice/10-tp-practice.html" class="btn btn-primary">TP</a>
                 </div>
             </div>
 
@@ -177,17 +188,6 @@
                 </div>
                 <div class="card-footer">
                     <a href="" class="btn btn-secondary">Cours</a>
-                    <a href="" class="btn btn-secondary">TP</a>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="practice"/>
-                <div class="card-body">
-                    <h5 class="card-title">Practice again <small class="text-muted">tue. nov. 24</small></h5>
-                    <p class="card-text">On continue notre jeu</p>
-                </div>
-                <div class="card-footer">
                     <a href="" class="btn btn-secondary">TP</a>
                 </div>
             </div>
