--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="messaging"/>
+                <img class="card-img-top" src="images/messaging.png" alt="messaging"/>
                 <div class="card-body">
                     <h5 class="card-title">Messaging <small class="text-muted">tue. nov. 17</small></h5>
                     <p class="card-text">Envoi de messages par un lapin blanc</p>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-secondary">Cours</a>
-                    <a href="" class="btn btn-secondary">TP</a>
+                    <a href="cours/11-messaging/11-messaging.html" class="btn btn-primary">Cours</a>
+                    <a href="cours/11-messaging/11-tp-messaging.html" class="btn btn-primary">TP</a>
                 </div>
             </div>
 
@@ -220,7 +220,7 @@
 
     <div id="footer">
         <div id="footer-text">
-            Last updated fri. oct. 30
+            Last updated sat. nov. 14
         </div>
     </div>
 
