--- a/index.html
+++ b/index.html
@@ -197,14 +197,13 @@
         <div class="card-deck top-10">
 
             <div class="card">
-                <img class="card-img-top" src="images/placeholder.png" alt="cloud-patterns"/>
+                <img class="card-img-top" src="images/rendu.png" alt="rendu"/>
                 <div class="card-body">
                     <h5 class="card-title">Dernière séance <small class="text-muted">tue. dec. 1</small></h5>
                     <p class="card-text"></p>
                 </div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-secondary">Cours</a>
-                    <a href="" class="btn btn-secondary">TP</a>
+                    <a href="cours/12-rendu/12-tp-rendu.html" class="btn btn-primary">TP</a>
                 </div>
             </div>
 
@@ -220,7 +219,7 @@
 
     <div id="footer">
         <div id="footer-text">
-            Last updated sat. nov. 14
+            Last updated tue. dec. 01
         </div>
     </div>
 
